using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimatorValues
{
    public static string isJumping = "IsJumping";
    public static string Speed = "Speed";
    public static string isDead = "IsDead";
    public static string playerDistance = "PlayerDistance";

}
